--- a/src/app/folder-view/folder-view.component.html
+++ b/src/app/folder-view/folder-view.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row w-full">
+<div class="m-3.5 flex flex-row w-full">
 
     <div *ngFor="let file of fileFolder.folder" class="m-1.5 p-3 w-40 h-48 bg-lgray rounded-md flex flex-col group cursor-pointer">
         <div class="basis-1/5 font-light text-defText group-hover:text-actText duration-200">
@@ -13,6 +13,19 @@
             {{ file.date.nanoseconds }}
         </div>
 
+    </div>
+
+    <div class="m-1.5 px-3 pb-3 w-40 h-48 bg-lgray text-defText hover:text-actText rounded-md flex flex-col group cursor-pointer duration-200">
+        <div class="text-lg mt-auto mb-1 flex flex-row">
+            <div class="mx-auto">
+                New File
+            </div>
+        </div>
+        <div class="text-5xl mt-1 mb-auto flex flex-row">
+            <div class="mx-auto">
+                <fa-icon icon="plus"></fa-icon>
+            </div>
+        </div>
     </div>
 
 </div>
