--- a/src/app/folder-view/folder-view.component.html
+++ b/src/app/folder-view/folder-view.component.html
@@ -15,7 +15,7 @@
 
     </div>
 
-    <div class="m-1.5 px-3 pb-3 w-40 h-48 bg-lgray text-defText hover:text-actText rounded-md flex flex-col group cursor-pointer duration-200">
+    <div (click)="createFile()" class="m-1.5 px-3 pb-3 w-40 h-48 bg-lgray text-defText hover:text-actText rounded-md flex flex-col group cursor-pointer duration-200">
         <div class="text-lg mt-auto mb-1 flex flex-row">
             <div class="mx-auto">
                 New File
