--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="side-bar basis-1/5 max-w-36 h-full grow">
         <app-side-bar></app-side-bar>
     </div>
-    <div class="Right-Side w-full">
+    <div class="Right-Side w-full h-full grow relative">
         <router-outlet></router-outlet>
     </div>
 </div>
