File Uploads and file reload work ;_;

--- a/src/app/file-view/file-view.component.html
+++ b/src/app/file-view/file-view.component.html
@@ -1,11 +1,18 @@
 <div class="p-5 w-full">
     <div class="h-full flex flex-col">
-        <div class="my-4 text-actText text-lg">
-            {{ folderName }} >
+        <div class="my-4 text-actText text-lg flex flex-row">
+            <div>
+                {{ folderName }} /
+            </div>
+
+            <div (click)="saveFile()" class="ml-auto cursor-pointer text-defText hover:text-actText duration-200">
+                <fa-icon icon="floppy-disk"></fa-icon>
+            </div>
+            
         </div>
 
         <div class="grow">
-            <textarea class="resize-none p-2 w-full h-full text-actText bg-lblack caret-slate-300 rounded leading-tight focus:outline-none">{{currText}}</textarea>
+            <textarea class="resize-none p-2 w-full h-full text-actText bg-lblack caret-slate-300 rounded leading-tight focus:outline-none" [(ngModel)]="currText"></textarea>
         </div>
     </div>
 </div>
