--- a/src/app/folder-view/folder-view.component.html
+++ b/src/app/folder-view/folder-view.component.html
@@ -1,16 +1,16 @@
 <div class="m-3.5 flex flex-row flex-wrap w-full">
 
-    <div (click)="navToFile(file.fileId, file.folder)" *ngFor="let file of fileFolder.folder" class="m-1.5 p-3 w-40 h-48 bg-lgray rounded-md flex flex-col group cursor-pointer">
+    <div (click)="navToFile(entry.key, entry.value.folder)" *ngFor="let entry of fileFolder.folder | keyvalue" class="m-1.5 p-3 w-40 h-48 bg-lgray rounded-md flex flex-col group cursor-pointer">
         <div class="basis-1/5 font-light text-defText group-hover:text-actText duration-200">
-            {{ file.folder }}
+            {{ entry.value.folder }}
         </div>
 
         <div class="basis-3/5 font-light text-defText group-hover:text-actText duration-200">
-            {{ file.noteHead }}
+            {{ entry.value.noteHead }}
         </div>
 
         <div class="mt-auto font-extralight text-sm text-defText group-hover:text-actText duration-200">
-            {{ convertToDate(file.date.seconds, file.date.nanoseconds) }}
+            {{ convertToDate(entry.value.date.seconds, entry.value.date.nanoseconds) }}
         </div>
 
     </div>
