--- a/src/app/file-view/file-view.component.html
+++ b/src/app/file-view/file-view.component.html
@@ -1,5 +1,6 @@
-<div class="p-5 w-full">
-    <div class="h-full flex flex-col">
+<div class="w-full">
+    <app-alert></app-alert>
+    <div class="p-5 h-full flex flex-col">
         <div class="my-4 text-actText text-lg flex flex-row">
             <div>
                 {{ folderName }} /
