--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-row h-dvh">
-    <div class="side-bar basis-1/5 max-w-36 h-full grow">
-        <app-side-bar></app-side-bar>
+<div class="flex flex-row h-dvh -z-1">
+    <div class="side-bar basis-1/5 max-w-36 h-full grow -z-1">
+        <app-side-bar class="-z-1"></app-side-bar>
     </div>
     <div class="Right-Side w-full h-full grow relative">
         <router-outlet></router-outlet>
