--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -1,3 +1,20 @@
-<div>
-    <app-dash-file></app-dash-file>
+<div class="relative">
+    <div class="m-3.5 flex flex-row flex-wrap">
+
+        <div (click)="navToFile(entry.fileId, entry.content.folder)" *ngFor="let entry of dashF.dashFiles" class="m-1.5 p-3 w-40 h-48 bg-lgray rounded-md flex flex-col group cursor-pointer">
+            <div class="basis-1/5 font-light text-defText group-hover:text-actText duration-200">
+                {{ entry.content.folder }}
+            </div>
+
+            <div class="basis-3/5 font-light text-defText group-hover:text-actText duration-200">
+                {{ entry.content.noteHead }}
+            </div>
+
+            <div class="mt-auto font-extralight text-sm text-defText group-hover:text-actText duration-200">
+                {{ convertToDate(entry.content.date.seconds, entry.content.date.nanoseconds) }} <br>
+                {{ convertToTime(entry.content.date.seconds, entry.content.date.nanoseconds) }}
+            </div>
+        </div>
+
+    </div>
 </div>
