New Users creation works Added some alert styling

--- a/src/app/file-view/file-view.component.html
+++ b/src/app/file-view/file-view.component.html
@@ -1,5 +1,5 @@
 <div class="w-full">
-    <app-alert></app-alert>
+    <!-- <app-alert></app-alert> -->
     <div class="p-5 h-full flex flex-col">
         <div class="my-4 text-actText text-lg flex flex-row">
             <div>
