--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="flex flex-row h-dvh -z-1">
+    <app-alert></app-alert>
     <div class="side-bar basis-1/5 max-w-36 h-full grow -z-1">
         <app-side-bar class="-z-1"></app-side-bar>
     </div>
