--- a/src/app/side-bar/folders/folders.component.html
+++ b/src/app/side-bar/folders/folders.component.html
@@ -15,8 +15,8 @@
                 </div>
             </li>
 
-            <li>
-                <input (blur)="clearNewFol()" (keydown.enter)="createFolder()" class="text-actText bg-lblack caret-slate-300 rounded w-full py-0.5 px-3 leading-tight focus:outline-none focus:bg-lblack focus:border-purple-500 placeholder-defText"
+            <li [class.border-rose-500]="newFolderError" [class.border-1]="newFolderError" class="my-1 rounded">
+                <input (blur)="clearNewFol()" (keydown.enter)="createFolder()"  class="text-actText bg-lblack caret-slate-300 rounded w-full py-0.5 px-3 leading-tight focus:outline-none focus:bg-lblack placeholder-defText"
                 placeholder="New Folder" [(ngModel)]="newFolder">
             </li>
         </ul>
