--- a/src/app/signup-page/signup-page.component.html
+++ b/src/app/signup-page/signup-page.component.html
@@ -10,6 +10,7 @@
         <div class="relative my-3" data-te-input-wrapper-init>
             <input
                 type="email"
+                [class.border-rose-500]="signUpError"
                 class="peer block min-h-[auto] w-full rounded border-1 border-actText bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0 focus:border-purple-500"
                 placeholder="Email address"
                 id="email-id-control"
@@ -26,6 +27,7 @@
         <div class="relative my-3" data-te-input-wrapper-init>
             <input
                 type="password"
+                [class.border-rose-500]="signUpError"
                 class="peer block min-h-[auto] w-full rounded border-1 border-actText bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0 focus:border-purple-500"
                 placeholder="Password"
                 id="pass-control"
@@ -39,9 +41,20 @@
             </label>
         </div>
 
+        <div class="flex flex-col my-2 sm:flex-row">
+            <div [class.invisible]="!signUpError" class="text-rose-500">
+                {{ errorMessage }}
+            </div>
+
+            <div class="mt-2 sm:ml-auto sm:mt-0 text-purple-400 cursor-pointer">
+                Forgot Password?
+            </div>
+        </div>
+
         <div class="my-3 w-full">
-            <button class="shadow w-full bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded duration-150" type="button">
-                <div class="invisible animate-spin inline-block w-3 h-3 border-[2px] border-current border-t-transparent rounded-full" role="status" aria-label="loading">
+            <button class="shadow w-full bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded duration-150" type="button"
+            (click)="createUser()">
+                <div [class.hidden]="!loadLogin" class="invisible animate-spin inline-block w-3 h-3 border-[2px] border-current border-t-transparent rounded-full" role="status" aria-label="loading">
                 </div>
                 Sign Up
             </button>
