--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="flex flex-row h-dvh -z-1">
     <app-alert></app-alert>
+    <app-double-check></app-double-check>
     <div class="side-bar basis-1/5 max-w-36 h-full grow -z-1">
         <app-side-bar class="-z-1"></app-side-bar>
     </div>
