--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -2,8 +2,13 @@
     <div class="m-3.5 flex flex-row flex-wrap">
 
         <div (click)="navToFile(entry.fileId, entry.content.folder)" *ngFor="let entry of dashF.dashFiles" class="m-1.5 p-3 w-40 h-48 bg-lgray rounded-md flex flex-col group cursor-pointer">
-            <div class="basis-1/5 font-light text-defText group-hover:text-actText duration-200">
-                {{ entry.content.folder }}
+            <div class="flex flex-row">
+                <div class="basis-1/5 font-light text-defText group-hover:text-actText duration-200">
+                    {{ entry.content.folder }}
+                </div>
+                <div [class.hidden]="!entry.content.favorite" class="ml-auto cursor-pointer text-purple-500 duration-200">
+                    <fa-icon icon="star"></fa-icon>
+                </div>
             </div>
 
             <div class="basis-3/5 font-light text-defText group-hover:text-actText duration-200">
