--- a/src/app/side-bar/folders/folders.component.html
+++ b/src/app/side-bar/folders/folders.component.html
@@ -15,10 +15,14 @@
                 </div>
             </li>
 
-            <li [class.border-rose-500]="newFolderError" [class.border-1]="newFolderError" class="my-1 rounded">
-                <input (blur)="clearNewFol()" (keydown.enter)="createFolder()"  class="text-actText bg-lblack caret-slate-300 rounded w-full py-0.5 px-3 leading-tight focus:outline-none focus:bg-lblack placeholder-defText"
+            <li class="my-1 rounded flex flex-col">
+                <input (blur)="clearNewFol()" (keydown.enter)="createFolder()" [class.border-rose-500]="newFolderError" [class.border-1]="newFolderError"  class="text-actText bg-lblack caret-slate-300 rounded w-full py-0.5 px-3 leading-tight focus:outline-none focus:bg-lblack placeholder-defText"
                 placeholder="New Folder" [(ngModel)]="newFolder">
+                <div [class.hidden]="!newFolderError" class="text-rose-500 text-xs">
+                    Use a different Name
+                </div>
             </li>
+
         </ul>
     </div>
 
