--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -1,1 +1,59 @@
-<p>profile-view works!</p>
+<div class="text-actText w-full flex flex-col m-5">
+    <div class="mt-2.5 mb-5 py-2.5 w-full h-fit flex flex-row items-center">
+        <div class="ml-auto"></div>
+        <div class="text-2xl font-semibold">Profile</div>
+        <div class="mr-auto"></div>
+    </div>
+
+    <div class="my-6 bg-lgray px-6 py-3 rounded-md">
+        <div class="mt-3 mb-6">
+            Email : {{ email }}
+        </div>
+
+        <div (click)="showPassChange()" class="my-3 border-1 px-2 py-1 w-fit border-lblack rounded-md text-defText hover:text-actText hover:bg-black duration-200 cursor-pointer">
+            Reset Password
+        </div>
+
+        <div *ngIf="showResetPass">
+            <div autocomplete="off" class="relative my-3" data-te-input-wrapper-init>
+                <input
+                    type="password"
+                    class="peer block min-h-[auto] w-full rounded border-1 border-actText bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0 focus:border-purple-500"
+                    placeholder="Password"
+                    id="pass-control"
+                    autocomplete="new-password"
+                    [(ngModel)]="newPass"
+                />
+    
+                <label 
+                    for="pass-control" 
+                    class="absolute mx-1.5 px-1.5 my-0.5 py-0.5 rounded-md left-0 -top-3.5 bg-lgray text-actText text-sm peer-placeholder-shown:text-base peer-placeholder-shown:text-actText peer-placeholder-shown:top-2 transition-all peer-focus:-top-3.5 peer-focus:text-actText peer-focus:text-sm">
+                    Password
+                </label>
+            </div>
+
+            <div class="px-2 py-1 w-64 font-semibold rounded-md border-1 border-purple-500 text-purple-500
+                hover:text-actText hover:bg-purple-500 cursor-pointer duration-200">
+                Confirm
+            </div>
+        </div>
+
+    </div>
+
+    <div class="mt-auto">
+        <div class="px-2 py-1 w-64 text-rose-700 font-semibold border-1 border-rose-600 rounded sm cursor-pointer duration-200
+        hover:text-actText hover:bg-rose-600">
+            Delete Account
+        </div>
+    </div>
+
+    <div class="mt-6 text-defText hover:text-actText">
+        <div class="">
+            Support
+        </div>
+        <div>
+            Email concerns to rameshke&#64;msu.edu
+        </div>  
+    </div>
+
+</div>
