Deleting folder Works :) Needs some updates for ui

--- a/src/app/folder-view/folder-view.component.html
+++ b/src/app/folder-view/folder-view.component.html
@@ -1,5 +1,5 @@
-<div class="relative">
-    <div class="m-3.5 flex flex-row flex-wrap">
+<div class="relative flex flex-row">
+    <div class="m-3.5 mr-5 flex flex-row flex-wrap overflow-scroll">
 
         <div (click)="navToFile(entry.key, entry.value.folder)" *ngFor="let entry of fileFolder.folder | keyvalue" class="m-1.5 p-3 w-40 h-48 bg-lgray rounded-md flex flex-col group cursor-pointer">
             <div class="flex flex-row">
@@ -46,5 +46,15 @@
             </div>
         </div>
 
+    </div>
+    <div class="absolute right-2.5 top-5">
+        <fa-icon (click)="toggleFolderDelete()"
+         icon="ellipsis-v" class="text-defText hover:text-actText text-xl mt-auto cursor-pointer duration-200"></fa-icon>
+        <div class="absolute right-0.5 top-8.25 text-rose-700 font-semibold border-1 border-rose-600 rounded sm truncate cursor-pointer duration-200
+        px-2 py-1 bg-lgray hover:text-actText hover:bg-rose-600"
+        [class.hidden]="folderDeleteHidden"
+        (click)="deleteFolder()">
+            Delete Folder
+        </div>
     </div>
 </div>
