--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -1,4 +1,4 @@
-<div class="text-actText w-full flex flex-col m-5">
+<div class="text-actText w-full flex flex-col m-5 overflow-scroll">
     <div class="mt-2.5 mb-5 py-2.5 w-full h-fit flex flex-row items-center">
         <div class="ml-auto"></div>
         <div class="text-2xl font-semibold">Profile</div>
@@ -18,10 +18,12 @@
             <div autocomplete="off" class="relative my-3" data-te-input-wrapper-init>
                 <input
                     type="password"
-                    class="peer block min-h-[auto] w-full rounded border-1 border-actText bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0 focus:border-purple-500"
+                    class="peer block min-h-[auto] w-full rounded border-1 border-actText bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
                     placeholder="Password"
                     id="pass-control"
                     autocomplete="new-password"
+                    [class.border-rose-500]="passError || newPass.length < 6"
+                    [class.border-green-600]="newPass.length > 5 && !passError"
                     [(ngModel)]="newPass"
                 />
     
@@ -32,8 +34,27 @@
                 </label>
             </div>
 
-            <div class="px-2 py-1 w-64 font-semibold rounded-md border-1 border-purple-500 text-purple-500
-                hover:text-actText hover:bg-purple-500 cursor-pointer duration-200">
+            <div autocomplete="off" class="relative my-3" data-te-input-wrapper-init>
+                <input
+                    type="password"
+                    class="peer block min-h-[auto] w-full rounded border-1 border-actText bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                    placeholder="Confirm Password"
+                    id="pass-control"
+                    autocomplete="new-password"
+                    [class.border-rose-500]="newPass != confirmNewPass || passError"
+                    [class.border-green-600]="newPass == confirmNewPass && !passError"
+                    [(ngModel)]="confirmNewPass"
+                />
+    
+                <label 
+                    for="pass-control" 
+                    class="absolute mx-1.5 px-1.5 my-0.5 py-0.5 rounded-md left-0 -top-3.5 bg-lgray text-actText text-sm peer-placeholder-shown:text-base peer-placeholder-shown:text-actText peer-placeholder-shown:top-2 transition-all peer-focus:-top-3.5 peer-focus:text-actText peer-focus:text-sm">
+                    Confirm Password
+                </label>
+            </div>
+
+            <div (click)="changePass()" class="px-2 py-1 w-64 font-semibold rounded-md border-1 border-purple-700 text-purple-600
+                hover:text-actText hover:bg-purple-700 cursor-pointer duration-200">
                 Confirm
             </div>
         </div>
