Not much today Reset Pass Done :)

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -45,7 +45,7 @@
                 {{ errorMessage }}
             </div>
 
-            <div class="mt-2 sm:ml-auto sm:mt-0 text-purple-400 cursor-pointer">
+            <div (click)="navToForgotPass()" class="mt-2 sm:ml-auto sm:mt-0 text-purple-400 cursor-pointer">
                 Forgot Password?
             </div>
         </div>
