--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="mt-auto">
-        <div class="px-2 py-1 w-64 text-rose-700 font-semibold border-1 border-rose-600 rounded sm cursor-pointer duration-200
+        <div (click)="reqDeleteAccount()" class="px-2 py-1 w-64 text-rose-700 font-semibold border-1 border-rose-600 rounded sm cursor-pointer duration-200
         hover:text-actText hover:bg-rose-600">
             Delete Account
         </div>
