--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,7 +1,39 @@
 <div class="py-5 h-full">
     <div class="p-5 bg-lgray h-full rounded-r-lg flex flex-col text-defText relative overflow-scroll">
-        <div class="bg-white h-20 px-8 py-7">
-            Logo
+        <div class="pl-2 h-24">
+            <svg width="87.5" height="87.5" viewBox="0 0 224 256" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                    <filter id="filter0_d_26_7" x="12" y="16.7906" width="200" height="198.265" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="4"/>
+                    <feGaussianBlur stdDeviation="2"/>
+                    <feComposite in2="hardAlpha" operator="out"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_26_7"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_26_7" result="shape"/>
+                    </filter>
+                    <filter id="filter1_d_26_7" x="12" y="140.683" width="200" height="102.297" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                    <feOffset dy="4"/>
+                    <feGaussianBlur stdDeviation="2"/>
+                    <feComposite in2="hardAlpha" operator="out"/>
+                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_26_7"/>
+                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_26_7" result="shape"/>
+                    </filter>
+                </defs>
+
+                <path d="M217.883 59.5593L117.456 3.06899C114.037 1.14596 109.894 1.01516 106.361 2.71868L6.78841 50.727C2.6381 52.7281 0 56.9287 0 61.5362V185.036C0 189.342 2.30743 193.319 6.04633 195.455L106.046 252.598C109.736 254.706 114.264 254.706 117.954 252.598L217.954 195.455C221.693 193.319 224 189.342 224 185.036V70.0182C224 65.6829 221.662 61.6847 217.883 59.5593Z" fill="#6b21a8"/>
+                
+                <g filter="url(#filter0_d_26_7)">
+                    <path d="M203.533 61.0513L115.277 17.6129C113.196 16.5885 110.772 16.518 108.635 17.4197L20.8904 54.4369C17.9266 55.6872 16 58.5911 16 61.8078V155.056C16 158.086 17.712 160.856 20.4223 162.211L108.422 206.211C110.675 207.337 113.325 207.337 115.578 206.211L203.578 162.211C206.288 160.856 208 158.086 208 155.056V68.229C208 65.1807 206.268 62.3974 203.533 61.0513Z" fill="#767676"/>
+                </g>
+                <g filter="url(#filter1_d_26_7)">
+                    <path d="M205.353 179.383L115.11 141.312C113.121 140.473 110.879 140.473 108.89 141.312L18.6471 179.383C17.0428 180.06 16 181.632 16 183.373C16 184.987 16.8981 186.468 18.3299 187.214L108.305 234.075C110.621 235.282 113.379 235.282 115.695 234.075L205.67 187.214C207.102 186.468 208 184.987 208 183.373C208 181.632 206.957 180.06 205.353 179.383Z" fill="#3B3B3B" fill-opacity="0.92"/>
+                    </g>
+            </svg>                
         </div>
 
         <div class="Seperator my-5 w-full h-0.5 bg-lblack rounded-lg"></div>
